# indextts_mlx

./: .gitignore  CLAUDE.md  README.md  emotion_test.jsonl  pyproject.toml  scheduler.yaml
cli/: classify_emotions.py  download_weights.py  extract.py  m4b.py  main.py  srv.py  tts.py  web.py
indextts_mlx/: __init__.py  boundary_detector.py  config.py  emotion_classifier.py  emotion_config.py  epub_extractor.py  m4b_creator.py  normalizer.py  pipeline.py  renderer.py  segmenter.py  synthesize_long.py  voices.py
indextts_mlx/audio/: __init__.py  kaldi_fbank.py  mel.py  seamless_fbank.py
indextts_mlx/loaders/: __init__.py  bigvgan_loader.py  campplus_loader.py  gpt_loader.py  s2mel_loader.py  semantic_codec_loader.py  w2vbert_loader.py
indextts_mlx/models/: __init__.py  bigvgan.py  bigvgan_activations.py  bigvgan_alias_free.py  bigvgan_wavenet.py  campplus.py  conformer.py  gpt.py  gpt2.py  perceiver.py  qwen_emo.py  s2mel.py  s2mel_cfm.py  s2mel_dit.py  s2mel_dit_v2.py  s2mel_gptfast_transformer.py  s2mel_layers.py  s2mel_regulator.py  s2mel_regulator_v2.py  s2mel_transformer.py  s2mel_weight_loader.py  semantic_codec.py  w2vbert.py
indextts_mlx/srv/: README.md  __init__.py  app.py  client.py  config.py  cpu.py  (+2 more)
schemas/: emotion_config.schema.json  example_chapter.jsonl  segment.schema.json
tests/: compare_pytorch_mlx.py  conftest.py  test_bigvgan.py  test_bigvgan_alias_free_perf.py  test_boundary_detector.py  test_campplus.py  test_emotion_classifier.py  test_emotion_classifier_integration.py  test_emotion_classifier_llm.py  test_emotion_config.py  test_gpt.py  test_kaldi_fbank.py  test_normalizer.py  test_paragraph_breaks.py  test_pipeline.py  test_podcast.py  test_s2mel.py  test_sample_top_k.py  test_scheduler.py  test_seamless_fbank.py  test_segmenter.py  test_segmenter_normalization_ftfy.py  test_semantic_codec.py  test_srv_api.py  test_srv_backends.py  test_srv_backends_integration.py  test_srv_client.py  test_srv_cpu.py  test_srv_heartbeat.py  test_srv_model_lifecycle.py  test_srv_queue.py  test_synthesize_long.py  test_voices.py  test_w2vbert.py  test_web.py
voices/: README.md  emotions.json
(+15 files in other folders)
